apps/lottie-api/.deploy/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lams-api
  namespace: ${ENVIRONMENT}
  labels:
    app: lams-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lams-api
  template:
    metadata:
      labels:
        app: lams-api
    spec:
      containers:
        - name: lams-api
          image: ${DOCKER_IMAGE_PATH}
          imagePullPolicy: Always
          ports:
            - containerPort: 4000
