apps/lottie-api/.deploy/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: lams-api-service
  namespace: ${ENVIRONMENT}
spec:
  selector:
    app: lams-api
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
